--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # ---------------------------------------------------------------------------
   # INFRASTRUCTURE
   # ---------------------------------------------------------------------------
-  
+
   # PostgreSQL (Auth, Messaging, Notifications, Social)
   db:
     image: postgres:15-alpine
@@ -21,7 +21,7 @@ services:
     networks:
       - aura_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -39,7 +39,7 @@ services:
     networks:
       - aura_network
     healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+      test: [ "CMD", "rabbitmq-diagnostics", "-q", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -108,7 +108,7 @@ services:
 
   # Notification Service
   notifications-service:
-    build: ../notifications-service
+    build: ../notifications
     container_name: aura_notifications_service
     ports:
       - "3004:3004"
@@ -129,7 +129,7 @@ services:
   # ---------------------------------------------------------------------------
   # API GATEWAY
   # ---------------------------------------------------------------------------
-  
+
   gateway:
     build: ../gateway-service
     container_name: aura_gateway
