--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
 
   # Auth Service
   auth-service:
-    build: ../auth-service-aura
+    build: ../auth-service
     container_name: aura_auth_service
     ports:
       - "3001:3001"
@@ -69,7 +69,7 @@ services:
 
   # Social Service (Wilber)
   social-service:
-    build: ../social-service-aura
+    build: ../social-service
     container_name: aura_social_service
     ports:
       - "3002:3002"
@@ -103,7 +103,7 @@ services:
 
   # Messaging Service (Aura)
   messaging-service:
-    build: ../messaging-service-aura
+    build: ../messaging-service
     container_name: aura_messaging_service
     ports:
       - "3003:3003"
@@ -122,7 +122,7 @@ services:
 
   # Notification Service
   notifications-service:
-    build: ../notifications-service-aura
+    build: ../notifications-service
     container_name: aura_notifications_service
     ports:
       - "3004:3004"
@@ -153,7 +153,7 @@ services:
   # ---------------------------------------------------------------------------
 
   gateway:
-    build: ../gateway-service-aura
+    build: ../gateway-service
     container_name: aura_gateway
     ports:
       - "3000:3000"
